Use new Files#readString, Files#writeString methods