@@ -34,7 +34,6 @@ import static io.activej.bytebuf.ByteBufStrings.wrapUtf8;
 import static io.activej.eventloop.Eventloop.getCurrentEventloop;
 import static io.activej.promise.TestUtils.await;
 import static io.activej.promise.TestUtils.awaitException;
-import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.nio.file.StandardOpenOption.CREATE;
 import static java.nio.file.StandardOpenOption.TRUNCATE_EXISTING;
 import static java.util.concurrent.Executors.newSingleThreadExecutor;
@@ -163,7 +162,7 @@ public final class ActiveFsServletAndClientTest {
 			for (String path : initialFiles) {
 				Path file = this.storage.resolve(path);
 				Files.createDirectories(file.getParent());
-				Files.write(file, String.format("This is contents of file %s", file).getBytes(UTF_8), CREATE, TRUNCATE_EXISTING);
+				Files.writeString(file, String.format("This is contents of file %s", file), CREATE, TRUNCATE_EXISTING);
 			}
 		} catch (IOException e) {
 			throw new AssertionError(e);
